--- a/main.css
+++ b/main.css
@@ -1,15 +1,20 @@
-body{display: flex;
+body{
+  display: flex;
   font-family: 'Lato', sans-serif;
   width: 100%;
   margin: 0%;
 }
+
+/*---------------------------*/
+
+@media screen and (min-width:360px){
 
 .Menu{
   display: flex;
   justify-content: space-between;
   background-color: #e0e0e0;
   align-items: center;
-  width: 100%;
+  width:100%;
   height: 60px;
   padding: 20px;
   
@@ -70,7 +75,7 @@ body{display: flex;
   background-color: white;
   color: #333;
   font-size: 14px;
-  width: 371px;
+  width: 361px;
   height: 290px;
   left: 20px;
   top: 110px;
@@ -81,14 +86,12 @@ body{display: flex;
 }
 
 
-label{
-  position: absolute;
+label{position: absolute;
   background-color: white;
   color: #333;
   text-align: left;
   font-size: 14px;
   width: 371px;
-  height: 22,22px;
   
 
 }
@@ -99,7 +102,7 @@ select{
   border-radius: 4px;
   width: 371px;
   height: 32px;
-  top: 25px;
+  top: 20px;
   margin: 20px 0;
   
   
@@ -111,7 +114,7 @@ select{
   color: #333;
   width: 371px;
   height: 32px;
-  top: 24px;
+  top: 20px;
   margin: 24PX 0;
   
   
@@ -123,7 +126,7 @@ select{
   color: #333;
   width: 371px;
   height: 32px;
-  top: 24px;
+  top: 20px;
   margin: 24px 0;
 
 }
@@ -152,7 +155,7 @@ button{
   width: 371px;
   height: 281px;
   top: 410px;
-  padding: 15px;
+  padding: 25px;
 }
 .extrato h1{
 color: #000;
@@ -171,100 +174,333 @@ footer{
   top: 723px;
 }
 
-/*---------------------*/
-  @media (min-width:1024px) {
+}
 
-    .Menu{
-      background-color: #e0e0e0;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      height: 60px;
-      width: 100%;
-      margin: 0px;
-      padding: 0px;
-    
-    }
-    
-    .responsiveMenu ul{
-      display: flex;
-      flex-direction:row;
-      position: relative;
-      width: 350px;
-      height: 40px;
-      background-color: white;
-      color: #333;
-    }
+/* @media screen and (min-width:768px){
 
-    .responsiveMenu ul li{
-      border-left: 1px solid #333;
-    }
-
-    .responsiveMenu li:nth-child(2){
-    border: 0;
-    }
-
-    .responsiveMenu ul li:nth-child(1){
-      display: none;
-    }
-
-    .Barra-icon{
-        display: none;
-    }
-    
-
-    .formulario{
-      display: block;
-      justify-content: center;
-      border: solid 1px #333;
-      border-radius: 4px;
-      background-color: white;
-      width: 400px;
-      height: 344px;
-      left: 20px;
-      top: 130px;
-      padding: 20px;
-    }
-
-    .formulario h1{
-      display: block;
-      background-color: #fff;
-      color: black;
-      text-align: center;
-      font-size: 18px;
-      width: 100%;
-      height: 20px;
-      top: 20px;
-
-    }
-
-    .linha{
-      display: none;
-    }
-
-   .extrato{
-     position: absolute;
-    background-color: white;
-    width: 812px;
-    height:281px;
-    left: 440px;
-    top: 90px;
-    margin: 40px;
+  .Menu{
+    display: flex;
+    justify-content: space-between;
+    background-color: #e0e0e0;
+    align-items: center;
+    width:100%;
+    height: 60px;
     padding: 20px;
-
-
-   }
-
-   .extrato span{
-    color: black;
-    font-size: 18px;
-    text-align: center;
-    width: 174px;
-    height: 20px;
-    left: 339px;
-   }
-   
+    
   }
+  
+  .Menu span{
+    color: #333;
+    font-size: 20px;
+    font-weight: 600;
+  }
+  
+  .Barra-icon div{
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+  }
+  
+  .responsiveMenu ul{
+    position: absolute;
+    display: none;
+    list-style-type: none;
+    background-color: #333;
+    font-size: 16px;
+    color: #fff;
+    position: fixed;
+    height: 1000%;
+    width: 85.4%;
+    right: 0px;
+    top: 0px;
+    margin: 0px;
+    padding: 20px 0px;
+  
+  }
+  
+  .responsiveMenu ul li{
+    text-align: right;
+    margin: 7px 0;
+    padding: 0px 20px;
+  }
+  
+  .responsiveMenu ul li:nth-child(1){
+    text-align: left;
+  }
+  
+  .responsiveMenu ul li:hover{
+    background-color: #c4c4c4;
+    color: #333;
+  }
+  
+  .responsiveMenu:hover ul{
+    display: block;
+  
+  }
+
+  .formulario{
+    display:flex;    
+    justify-content:space-around; 
+    border: solid 1px #333;
+    border-radius: 4px;
+    background-color: white;
+    width: 728px;
+    height: 189px;
+    left: 20px;
+  }
+
+  
+  label{
+    display: flex;
+    background-color: white;
+    color: #333;
+    text-align: left;
+    font-size: 14px;
+    width: 150px;
+    height: 22,22px;
+  
+  }
+
+  select{
+    display: flex;
+    background-color: white;
+    color: #333;
+    border: solid 1px #333;
+    border-radius: 4px;
+    width: 150px;
+    height: 57px;
+    left: 20px;
+    right: 25px;
+    top: 55px;
+    
+    
+    
+  }
+
+  .mercadoria input{
+    display: flex;
+    background-color: white;
+    border-radius: 4px;
+    color: #333;
+    width: 348px;
+    height: 57px;
+    left: 190px;
+    top: 55px;
+    padding: 20px;
+  
+
+}
+
+.valor input{
+  display: flex;
+  background-color:white;
+  border-radius: 4px;
+  color: #333;
+  width: 150px;
+  height: 55px;
+  left: 558;
+  top: 55px;
+  padding: 20px;
+}
+
+button{ 
+  position: absolute;
+  background-color: #333;
+  border-radius: 4px;
+  color: #c4c4c4;
+  width: 200px;
+  height: 33px;
+  left: 508;
+  top: 126px;
+  
+
+}
+
+
+.linha{
+  display: none;
+}
+
+.extrato{
+  position: absolute;
+  background-color: white;
+  width: 728px;
+  height:281px;
+  left:20px;
+  top: 335px;
+  
+
+ }
+ table{
+   position: absolute;
+   background-color: white;
+   width: 728px;
+   height: 281px;
+   right: 20px;
+ }
+
+ footer{
+  position:absolute;
+  background-color: #333;
+  width:100%;
+  height: 8px;
+  top: 723px;
+}
+
+}*/
+
+/*---------------------*/
+@media screen and (min-width:1024px) {
+
+  .Menu{      
+    background-color: #e0e0e0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 60px;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+  
+  }
+  
+  .responsiveMenu ul{
+    display: flex;
+    flex-direction:row;
+    position: relative;
+    width: 350px;
+    height: 40px;
+    background-color: white;
+    color: #333;
+  }
+
+  .responsiveMenu ul li{
+    border-left: 1px solid #333;
+  }
+
+  .responsiveMenu li:nth-child(2){
+  border: 0;
+  }
+
+  .responsiveMenu ul li:nth-child(1){
+    display: none;
+  }
+
+  .Barra-icon{
+      display: none;
+  }
+  
+
+  .formulario{
+    display: block;
+    justify-content: space-around;
+    border: solid 1px #333;
+    border-radius: 4px;
+    background-color: white;
+    width: 400px;
+    height: 344px;
+    left: 20px;
+    top: 130px;
+    padding: 20px;
+  }
+
+  .formulario h1{
+    display: block;
+    background-color: #fff;
+    color: black;
+    text-align: center;
+    font-size: 18px;
+    width: 100%;
+    height: 20px;
+    top: 20px;
+
+  }
+
+  label{position: absolute;
+    background-color: white;
+    color: #333;
+    text-align: left;
+    font-size: 14px;
+    width: 371px;
+    
+  
+  }
+  select{
+    background-color: white;
+    color: #333;
+    border: solid 1px #333;
+    border-radius: 4px;
+    width: 371px;
+    height: 32px;
+    top: 20px;
+    margin: 20px 0;
+    
+    
+  }
+  
+  .mercadoria input{
+    background-color: white;
+    border-radius: 4px;
+    color: #333;
+    width: 371px;
+    height: 32px;
+    top: 20px;
+    margin: 24PX 0;
+    
+    
+  }
+  
+  .valor input{
+    background-color:white;
+    border-radius: 4px;
+    color: #333;
+    width: 371px;
+    height: 32px;
+    top: 20px;
+    margin: 24px 0;
+  
+  }
+  
+  button{ 
+    position: relative;
+    background-color: #333;
+    border-radius: 4px;
+    color: #c4c4c4;
+    width: 371px;
+    height: 32px;
+    margin: 5px 0;
+  
+  }
+  
+
+  .linha{
+    display: none;
+  }
+
+ .extrato{
+  position: absolute;
+  background-color: white;
+  width: 812px;
+  height:281px;
+  left: 440px;
+  top: 90px;
+  margin: 40px;
+  padding: 20px;
+
+
+ }
+
+ .extrato span{
+  color: black;
+  font-size: 18px;
+  text-align: center;
+  width: 174px;
+  height: 20px;
+  left: 339px;
+ }
+}
+ 
 
 
 
